Return empty list if no Scottish Bankrupt Officer found